Closed Bug 1207041 Opened 10 years ago Closed 10 years ago

Categories

(Core :: Graphics: Layers, defect)

43 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla44
Tracking Status
firefox42 --- unaffected
firefox43 + fixed
firefox44 + fixed

People

(Reporter: sole, Assigned: dvander)

References

()

Details

(Keywords: regression)

Attachments

(4 files)

Using Nightly 2015-09-20 I got a black screen as I scrolled down initially. With Nightly 2015-09-21 it gets white and shows a stretched fraction of the website but it is still unbrowseable. It works nicely in Firefox stable (40.0.3), and it also used to work nicely in Nighty a few weeks ago.
Reproduced on Windows7 Aero, Classic visual tyle. *Flicker a black rectangle during page loading *Black rectangle at status tooltip when hover over bookmrks/link *Black rectangle is drawn over the page when performed Ctrl+Shift+Del Build ID: https://hg.mozilla.org/mozilla-central/rev/039a8490891595736b16a3ccb17f025f4dcf13eb Mozilla/5.0 (Windows NT 6.1; WOW64; rv:44.0) Gecko/20100101 Firefox/44.0 ID:20150921073455 Regression window: https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=cd7b4b4b747485d59c9fb07cd31e17afac87f70b&tochange=df2be5ad917b Regressed by: Bug 1203829
Blocks: 1203829
Component: Graphics → Graphics: Layers
Flags: needinfo?(dvander)
Keywords: regression
Attached image screenshot
Attached video screencast
Black screen when change window size mode by double click on toolbar. Change monochrome/colored during scroll page.
Version: unspecified → 43 Branch
(In reply to Alice0775 White from comment #3) > Created attachment 8664890 [details] > screencast > > Black screen when change window size mode by double click on toolbar. > Change monochrome/colored during scroll page. Does this happen even with acceleration disabled? (layers.acceleration.disabled = true) And, does it still happen with APZ disabled? I can't reproduce the original report yet, but I see odd behavior in both Chrome and Firefox. In Firefox, the letters change from black to gradient as I scroll sometimes. In Chrome, the whole page flashes black.
Flags: needinfo?(dvander) → needinfo?(alice0775)
Flags: needinfo?(alice0775)
Tried * HWA disabled : reproduced monochrome problem * APZ disabled : reproduced black rectangle and monochrome problem
I think this was an existing problem, but Mac-only. When we added D3D11/BasicCompositor support for mix-blending, the problem extended there.
Assignee: nobody → dvander
Blocks: 1209278
Attached patch fixSplinter Review
This page has a huge background image with normal opaque text composited onto it with mix-blend-mode: screen. The compositor culls the background image layer since the text layer overlaps it, so the blend affect randomly pops in and out at weird times or places. Fix is to just treat mix-blend-mode layers as transparent for occlusion culling. I also did this for checkerboarding patterns since it could pretty materially change the page composition.
Attachment #8667593 - Flags: review?(mstange)
Comment on attachment 8667593 [details] [diff] [review] fix Review of attachment 8667593 [details] [diff] [review]: ----------------------------------------------------------------- Can you add a reftest?
Attachment #8667593 - Flags: review?(mstange) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
David, since this seems to also affect 43, do you want to request uplift?
Flags: needinfo?(dvander)
Comment on attachment 8667593 [details] [diff] [review] fix Approval Request Comment [Feature/regressing bug #]: None/css mix-blend-modes [User impact if declined]: On sites with CSS mix-blend-modes, the blend may be incorrect, usually resulting in a solid black color instead of the intended color pattern. [Describe test coverage new/current, TreeHerder]: Nightly [Risks and why]: No risk, the fix only affects mix-blend-mode pages and only removed an overeager optimization to them. [String/UUID change made/needed]: N/A Note: This bug is present on Firefox 42/41/lower, but Mac-only. We added more compositor support for mix-blend-modes in 43 and then the problem extended to Windows/Linux as well. So a beta uplift would be reasonable, but I don't think it's that serious of a problem to warrant it.
Flags: needinfo?(dvander)
Attachment #8667593 - Flags: approval-mozilla-aurora?
Comment on attachment 8667593 [details] [diff] [review] fix Fix for minor regression, baked on m-c for a week. Approved for uplift to aurora.
Attachment #8667593 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: