Bug 1207041 - Treat mix-blend-mode layers as transparent for occlusion culling. (bug 1207041, r=mstange). r=mstange, a=lizzard